--- a/Views/Shared/_NavBar.cshtml
+++ b/Views/Shared/_NavBar.cshtml
@@ -1,5 +1,12 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<Users> signInManager
+﻿    @using Microsoft.AspNetCore.Identity
+    @inject SignInManager<Users> signInManager
+    @inject IHttpContextAccessor HttpContextAccessor
+
+@{
+    string currentController = ViewContext.RouteData.Values["controller"]?.ToString() ?? "";
+    string currentAction = ViewContext.RouteData.Values["action"]?.ToString() ?? "";
+    string currentPath = HttpContextAccessor.HttpContext?.Request.Path.ToString().ToLower();
+}
 
 <style>
     /* navbar.css */
@@ -30,48 +37,64 @@
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
     }
 
+    .nav-item.active .nav-link {
+        color: #00d1b2 !important;
+        border-bottom: 2px solid #00d1b2;
+    }
+
     </style>
     <header>
 
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="https://mdbootstrap.com/docs/standard/" target="_blank" rel="noopener">MDB</a>
-        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
-                aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarExample01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item active"><a class="nav-link" href="#intro">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" target="_blank" rel="nofollow noopener">Learn Bootstrap 5</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://mdbootstrap.com/docs/standard/" target="_blank" rel="noopener">Download MDB UI KIT</a></li>
-            </ul>
-            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-                @if (signInManager.IsSignedIn(User))
-                {
-                    <li class="nav-item">
-                        <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
-                            @Html.AntiForgeryToken()
-                            <button type="submit" class="btn btn-link nav-link text-dark p-0">Logout</button>
-                        </form>
+       
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">TREK</a>
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+                    aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarExample01">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item @(currentPath == "/" ? "active" : "")">
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
-                }
-                else
-                {
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">
-                            Login
-                        </a>
+                    <li class="nav-item @(currentPath.Contains("/about") ? "active" : "")">
+                        <a class="nav-link" href="/about">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">
-                            Register
-                        </a>
+                    <li class="nav-item @(currentPath.Contains("/content") ? "active" : "")">
+                        <a class="nav-link" href="/content">Content</a>
                     </li>
-                }
-            </ul>
+                    <li class="nav-item @(currentPath.Contains("/blog") ? "active" : "")">
+                        <a class="nav-link" href="/blog">Blog</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                    @if (signInManager.IsSignedIn(User))
+                    {
+                        <li class="nav-item">
+                            <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                                @Html.AntiForgeryToken()
+                                <button type="submit" class="btn btn-link nav-link text-white p-0">Logout</button>
+                            </form>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item @(currentPath.Contains("/account/login") ? "active" : "")">
+                            <a class="nav-link text-white" asp-controller="Account" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item @(currentPath.Contains("/account/register") ? "active" : "")">
+                            <a class="nav-link text-white" asp-controller="Account" asp-action="Register">Register</a>
+                        </li>
+                    }
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+
 
     </header>
