--- a/Views/Shared/_NavBar.cshtml
+++ b/Views/Shared/_NavBar.cshtml
@@ -61,8 +61,8 @@
                     <li class="nav-item @(currentPath == "/" ? "active" : "")">
                         <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
-                    <li class="nav-item @(currentPath.Contains("/about") ? "active" : "")">
-                        <a class="nav-link" href="/about">About</a>
+                    <li class="nav-item @(currentPath.Contains("/AboutUs") ? "active" : "")">
+                        <a class="nav-link" asp-controller="AboutUs" asp-action="Index">About</a>
                     </li>
                     <li class="nav-item @(currentPath.Contains("/content") ? "active" : "")">
                         <a class="nav-link" href="/content">Content</a>
