--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,3 +6,4 @@
 
 @await Html.PartialAsync("_Navbar")
 @await Html.PartialAsync("_Carousel", carouselImages)
+@await Html.PartialAsync("_HomeAboutUs")
