--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
     <!-- Footer -->
     <footer class="border-top text-center text-muted mt-5 py-3">
         <div class="container">
-            &copy; 2025 - UserRoles -
+            &copy; 2025 - Trek -
             <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
