--- a/Views/Shared/_AdminHeader.cshtml
+++ b/Views/Shared/_AdminHeader.cshtml
@@ -120,7 +120,7 @@
     <a class="@(currentPath == "/settings" ? "active" : "")" href="/settings">Settings</a>
     <a class="@(currentPath == "/help" ? "active" : "")" href="/help">Help</a>
     <a class="@(currentPath == "/carousal" ? "active" : "")" asp-controller="Carousal" asp-action="Index">Carousel</a>
-    <a class="@(currentPath == "/AboutUs" ? "active" : "")" asp-controller="AboutUs" asp-action="Create">Carousel</a>
+    <a class="@(currentPath == "/AboutUs" ? "active" : "")" asp-controller="AboutUs" asp-action="Create">About</a>
     <a class="@(currentPath == "/" ? "active" : "")" href="/">Home</a>
 
     <hr />
